--- a/package.json
+++ b/package.json
@@ -1,36 +1,60 @@
 {
-  "name": "silentiumTest",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.74.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.85",
-    "@react-native/eslint-config": "0.74.85",
-    "@react-native/metro-config": "0.74.85",
-    "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+	"name": "silentiumTest",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"postinstall": "patch-package",
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"lint": "eslint .",
+		"start": "react-native start",
+		"test": "jest",
+		"pod": "cd ios && pod install && cd ..",
+		"clean": "rm -rf node_modules && rm -rf yarn.lock && rm -rf package-lock.json && rm -rf ios/Podfile.lock && rm -rf ios/Pods && yarn cache clean && yarn install --network-concurrency 1 && yarn pod --verbose"
+	},
+	"dependencies": {
+		"@react-navigation/bottom-tabs": "^6.6.1",
+		"@react-navigation/native": "^6.1.15",
+		"@react-navigation/native-stack": "^6.9.26",
+		"@tanstack/react-query": "^5.51.11",
+		"html-entities": "^2.5.2",
+		"javascript-time-ago": "^2.5.10",
+		"ky": "^1.4.0",
+		"meta-fetcher": "^3.1.1",
+		"patch-package": "^8.0.0",
+		"react": "18.2.0",
+		"react-native": "0.74.3",
+		"react-native-mmkv": "^2.12.2",
+		"react-native-reanimated": "^3.8.1",
+		"react-native-render-html": "^6.3.4",
+		"react-native-safe-area-context": "^4.9.0",
+		"react-native-screens": "^3.29.0",
+		"react-native-svg": "^15.4.0",
+		"react-native-url-polyfill": "^2.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@babel/preset-env": "^7.20.0",
+		"@babel/runtime": "^7.20.0",
+		"@react-native/babel-preset": "0.74.85",
+		"@react-native/eslint-config": "0.74.85",
+		"@react-native/metro-config": "0.74.85",
+		"@react-native/typescript-config": "0.74.85",
+		"@testing-library/jest-native": "^5.4.2",
+		"@testing-library/react-native": "^12.5.2",
+		"@types/jest": "^29.4.0",
+		"@types/react": "^18.2.6",
+		"@types/react-test-renderer": "^18.0.0",
+		"babel-jest": "^29.6.3",
+		"babel-plugin-inline-dotenv": "^1.7.0",
+		"babel-plugin-module-resolver": "^5.0.1",
+		"eslint": "^8.19.0",
+		"jest": "^29.6.3",
+		"prettier": "2.8.8",
+		"react-test-renderer": "18.2.0",
+		"typescript": "5.0.4"
+	},
+	"engines": {
+		"node": ">=18"
+	}
 }
